# Code-Commons-Collaborative

./: .gitignore  README.md  python-setup.md
commonhacks/code/mrs_gutenberg/: pyproject.toml
commonhacks/code/mrs_gutenberg/mrs_gutenberg/: call_open_api.py  download-gutenberg.py  faiss_book_search.py
commonhacks/docs/: mrs_gutenberg.md
