[tool.poetry]
name = "mrs-gutenberg"
version = "0.1.0"
description = ""
authors = ["Ian Philpot <ianphil@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dlg = "mrs_gutenberg.download-gutenberg:main"